Refactor startup scripts

--- a/supervisor-slapd.conf
+++ b/supervisor-slapd.conf
@@ -1,4 +1,29 @@
-[program:slapd]
-command=/usr/local/bin/slapd.sh
+# Configure slapd
+[program:slapd-management]
+command=/opt/slapd/slapd.sh
 autostart=true
+autorestart=false
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+
+# Slapd deamon used to configuration
+[program:slapd-deamon-config]
+command=/usr/sbin/slapd -h 'ldapi:///' -u openldap -g openldap -d 0
+autostart=false
+autorestart=false
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+[program:slapd-deamon]
+command=/usr/sbin/slapd -h "ldap:/// ldapi:///" -u openldap -g openldap -d 0
+autostart=false
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
